[package]
name = "osm-parser"
version = "4.1.0"
license = "MIT"
authors = ["swarkin"]
edition = "2024"
repository = "https://github.com/Swarkin/osm-parser"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = { version = "2", optional = true }

[features]
rustc_hash = ["dep:rustc-hash"]
