[package]
name = "osm-parser"
version = "5.0.0"
license = "MIT"
authors = ["swarkin"]
edition = "2024"
repository = "https://github.com/Swarkin/osm-parser"
categories = ["science::geo", "data-structures"]
keywords = ["osm", "openstreetmap", "parser", "geo", "geospatial"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = { version = "2", optional = true }

[features]
rustc_hash = ["dep:rustc-hash"]
